<resources>
    <string name="image_desc">Image Description</string>
    <string name="enqiry_thanks">Thank you for your inquiry!</string>
    <string name="done">Done</string>
    <string name="contact_you_soon">We will contact you soon</string>
    <string name="qr_step1">1. Scan the QR</string>
    <string name="qr_step2">2. Enter total amount</string>
    <string name="qr_step3">3. Pay discounted price</string>
    <string name="enter_amount">Enter total amount</string>
    <string name="calculate_discount">Calculate Discount</string>
    <string name="you_won">You won</string>
    <string name="coupon">coupon</string>
    <string name="congrats">Congrats!</string>
    <string name="pay_tad">Pay with TAD</string>
    <string name="my_deals_deals">My Deals</string>
    <string name="featured">Featured</string>
    <string name="submit_and_pay_at_counter">Submit and Pay at Counter</string>
    <string name="show_this_screen_at_the_counter">Show this screen at the Counter</string>
    <string name="bad_luck">Bad Luck!</string>
    <string name="you_didn_t_win_free_coupon_but_you_still_have_15_discount">You didn’t win Free Coupon But you still have </string>
    <string name="favourites">Favorites</string>
    <string name="my_info">My Info</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="agree_to_terms_and_conditions_to_use_campeat">Agree to Terms and Conditions \n to use Campeat.</string>
    <string name="see_details">See details</string>
    <string name="terms_of_service_policy">Terms of Service Policy</string>
    <string name="campeat_terms">본 약관(이하 ‘본 약관’이라 함)은 주식회사 애드블록(이하 ‘당사’라 함)이소유하고 운영하는 캠프잇(CampEat) 어플리케이션과 모바일 및 PC 포함 이와 관련된 웹사이트들(이하 ‘캠프잇’라 함)을 통하여 제공되는 모든 제품 및 서비스(이하 ‘본 서비스’라 함)와 관련하여 본 약관에 따라 당사와 이용계약을 체결하고 본 서비스를 이용하는 고객(이하 ‘회원’이라 함)과 당사 간의 권리, 의무 및 책임사항을 규정함을 목적으로 합니다.

캠프잇은 본 약관을 개정할 경우, 적용일자 및 개정사유를 명시하여 현행 약관과 함께 캠프잇의 관련 화면에 그 적용일자 7일 이전부터 적용일자 전일까지 공지합니다. 다만, 회원에게 불리하게 약관내용을 변경하는 경우에는 최소한 30일 이상의 사전 유예기간을 두고 공지합니다. 회사가 개정약관을 공지 또는 통지하면서 회원에게 30일 기간 내에 의사표시를 하지 않으면 의사표시가 표명된 것으로 본다는 뜻을 명확하게 공지 또는 통지 하였음에도 회원이 명시적으로 거부의 의사표시를 하지 아니한 경우 회원이 개정약관에 동의한 것으로 봅니다. 회원이 개정약관의 적용에 동의하지 않는 경우 회사는 개정 약관의 내용을 적용할 수 없으며, 이 경우 회원은 이용계약을 해지할 수 있습니다. 또한 기존 약관을 적용할 수 없는 특별한 사정이 있는 경우에는 회사는 이용계약을 해지할 수 있습니다.


제1조 (약관 동의 및 자격 요건)

이용계약은 회원이 되고자 하는 자가 약관의 내용에 대하여 동의를 한 다음 회원가입신청을 하고 당사가 이러한 신청에 대하여 승낙함으로써 체결됩니다. 당사는 이러한 신청에 대하여 이용을 승낙함을 원칙으로 합니다. 다만, 당사는 실명이 아니거나 타인의 명의를 이용한 경우, 허위의 정보를 기재하거나 당사가 제시하는 내용을 기재하지 않은 경우 등의 경우에 해당하는 신청에 대하여는 승낙을 하지 않거나 사후에 이용계약을 해지할 수 있습니다.

\n 1) 회원은 본 서비스 이용시 본 약관의 규정된 내용을 따라야 하고 관련법규를 준수해야 합니다.

\n 2) 서비스 이용을 위하여 회원이 제공하는 모든 정보는 정확하고 사실이며 회원은 이 정보들의 정확성을 유지하도록 정보 변경시 변경된 정보를 제공하여야 합니다.

\n 3) 회원은 최소 14세 이상이어야 하며 회원이 14세 미만이라고 의심되는 경우 회원 계정과 관련 정보는 별도의 통지나 예고 없이 삭제 될 수 있습니다.


제2조 (계정)


회원은 캠프잇 어플리케이션을 이용하기 위하여 계정을 만들어야 합니다. 계정을 만들기 위해 제공되는 회원의 개인정보는 관련법과 당사의 개인보호 정책에 의하여 보호됩니다. 회원은 개인정보 변경 시 변경된 정보를 입력하여야 하며 계정의 보안과 기밀을 유지하기 위하여 노력합니다. 캠프잇은 적절한 이유가 있을 경우 회원의 계정을 폐쇄하거나 접속을 제한할 수 있습니다.


제3조 (정보의 취급)

당사는 본 서비스 회원의 전화번호와 이메일주소 등의 정보를 수집합니다. 수집된 정보는 회원의 동의 없이는 다른 회원을 포함한 제3자에게는 절대 공개되지 않습니다. 구체적인 내용은 당사의 개인정보보호 정책을 통하여 확인하실 수 있습니다.


제4 조 (지적 재산권 및 서비스 내용물의 소유권 및 사용권)

1) \'내용물\' 이라 함은 문자, 그림, 사진, 동영상, 리뷰, 위치 및 기타 데이터 또는 모든 다른 형태의 송신 및 커뮤니케이션된 정보를 뜻합니다.  캠프잇에 있는 모든 내용물 (이하 ‘서비스 내용물’ 이라 함)은 오직 서비스 이용 목적을 위해서만 회원에게 제공되며, 관련 지적재산권의 보호를 받습니다. 회원은 당사의 서면 승인 없이 서비스 내용물을 변경, 수집, 복제, 송신, 출판 (온라인, 오프라인 포함), 배포, 방송 기타 방법에 의하여 이용하거나 제3자에게 이용하게 하여서는 아니 됩니다.

2) 서비스 내용물에는 회원 내용물, 캠프잇 내용물과 제3자 내용물이 모두 포함됩니다.  \'회원 내용물\' 이라 함은 평점, 리뷰, 좋아요, 댓글, 이벤트 참여 등 프로필에 기재하는 정보 등 회원이 캠프잇을 이용하면서 등록하거나 그 외 당사 서버에 송신하는 모든 내용물을 의미합니다.  \'캠프잇 내용물\' 이라 함은 페이스북, 인스타그램, 유튜브 포스팅, 기타 온라인 및 오프라인 제작물 등 캠프잇이 직접 제작하는 내용물 혹은 당사 서버에 송신하거나 페이스북, 인스타그램, 유튜브 페이지에 등록하는 모든 내용물을 의미합니다.  \'제3자 내용물\' 이라 함은 회원 혹은 캠프잇에게서 창조되거나 유래되는 내용물은 아니지만 캠프잇 서비스를 통해 회원에게 제공되는 내용물을 의미합니다.

3) 캠프잇 내용물에 대한 저작권 및 기타 지적 재산권은 당사에 귀속됩니다.  당사는 적절한 이유가 있을 경우 모든 서비스 내용물을 자의적으로 삭제, 수정, 편집, 복제 혹은 재등록 할 수 있습니다. 본 계약에서 달리 명시된 바를 제외하고 당사는 회원에게 어떠한 라이선스나 사용권도 부여하지 않습니다. 본 약관은 당사 또는 당사로부터 라이선스를 받은 자가 서비스 내용물이나 서비스에 대해 가지고 있는 권리, 또 이와 연관된 특허, 상표, 저작권 또는 다른 지적재산권에 영향을 주지 않습니다. 본 약관은 캠프잇의 상표나 다른 제3자의 상표권과 관련 라이선스나 다른 권리를 부여하지 않습니다.

4) 회원 (이하 \'해당 회원\'이라 함)가 직접 작성 및 등록한 평가점수, 리뷰, 답글 등의 게시물 (이하 \'해당 회원 내용물\'이라 함)에 대한 저작권 및 지적 재산권은 해당 회원에게 있으며, 해당 회원 내용물이 타인의 저작권을 침해하는 경우 그에 대한 책임은 해당 회원 본인이 부담합니다. 해당 회원은 당사에게 해당 회원 내용물을 독점적으로 이용할 수 있는 권리를 부여합니다. 이에 따라 당사는 캠프잇 어플리케이션, 모바일 및 PC 웹사이트, 페이스북, 인스타그램, 유투브 페이지, 광고물, 검색노출, 판촉, 홍보 등의 기타 매체에 해당 회원 내용물을 무상으로 영구적으로 이용할 수 있으며, 필요한 범위 내에서 해당 회원 내용물의 일부를 수정, 복제 및 편집할 수 있습니다. 또한, 해당 회원은 당사가 커뮤니티 가이드라인 혹은 기타 당사 내부의 적절한 이유에 따라 언제든지 해당 회원 내용물을 삭제, 수정 혹은 재등록할 권한이 있음에 동의합니다. 단, 해당 회원은 해당 회원 내용물에 대하여 마케팅, 판촉, 홍보 및 기타 자료로 사용되지 않을 것을 요청할 수 있으며, 캠프잇 서비스 내의 기능을 이용하여 해당 회원 내용물을 수정 혹은 삭제할 수 있습니다.

5) 제3자 (해당 회원이 아닌 회원 포함)가 해당 회원 내용물에 대한 저작권 및 지적 재산권을 침범했을 가능성이 있는 적절한 판단 근거가 있을 경우, 해당 회원은 본인을 대리하여 해당 회원의 저작권 및 지적 재산권을 행사하고 적절한 법적 조치를 취할 권리를 독점적으로 당사에 위임합니다. 단, 해당 회원 본인이 저작권 및 지적 재산권을 직접 행사할 것을 당사에 요청할 수 있으나, 그와 같은 요청이 없을 경우 본 조항의 위임권에 동의한 것으로 간주합니다.


제 5 조 ("게시물"의 관리)

1) "회원"의 "게시물"이 "정보통신망법" 및 "저작권법"등 관련법에 위반되는 내용을 포함하는 경우, 권리자는 관련법이 정한 절차에 따라 해당 "게시물"의 게시중단 및 삭제 등을 요청할 수 있으며, "회사"는 관련법에 따라 조치를 취하여야 합니다.

2) "회사"는 전항에 따른 권리자의 요청이 없는 경우라도 권리침해가 인정될 만한 사유가 있거나 기타 회사 정책 및 관련법에 위반되는 경우에는 관련법에 따라 해당 "게시물"에 대해 임시조치 등을 취할 수 있습니다.

3) 본 조에 따른 세부절차는 "정보통신망법" 및 "저작권법"이 규정한 범위 내에서 "회사"가 정한 절차에 따릅니다.

제 6 조 (위치기반서비스사업)

“캠프잇”은 “본 서비스”를 위하여 “회원”의 개인위치정보를 수집합니다.

위치정보 이용, 제공 사실 확인 자료의 보유근거 및 보유 기간
1) “캠프잇”은 "본 서비스"의 제공 및 타사업자 또는 이용 고객과의 민원처리를 위해 위치정보 이용, 제공 사실 확인자료를 자동 기록, 보존하며 해당자료는 1년간 보관합니다.
2) “캠프잇”은 개인위치정보를 “회원”이 “회원”이 지정하는 제3자에게 제공하는 경우에는 개인위치정보를 수집한 당해 통신 단말장치로 매회 “회원”에게 제공받는 자, 제공일시 및 제공목적을 즉시 통보합니다. 단, 아래 각 목에 해당하는 경우에는 “회원”이 미리 특정하여 지정한 통신 단말장치 또는 전자우편주소로 통보합니다.
　가. 개인위치정보를 수집한 당해 통신단말장치가 문자, 음성 또는 영상의 수신기능을 갖추지 아니한 경우
　나. “회원”이 온라인 게시 등의 방법으로 통보할 것을 미리 요청한 경우

개인위치정보 주체의 권리
1. “회원”은 “캠프잇”에 대하여 언제든지 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의의 전부 또는 일부를 철회할 수 있습니다. 이 경우 “회사”는 수집한 개인위치정보 및 위치정보 이용, 제공사실 확인자료를 파기합니다.
2. “회원”은 “캠프잇”에 대하여 언제든지 개인위치정보의 수집, 이용 또는 제공의 일시적인 중지를 요구할 수 있으며, “캠프잇”은 이를 거절할 수 없고 이를 위한 기술적 수단을 갖추고 있습니다.
3. “회원”은 “캠프잇”에 대하여 아래 각 목의 자료에 대한 열람 또는 고지를 요구할 수 있고, 당해 자료에 오류가 있는 경우에는 그 정정을 요구할 수 있습니다. 이 경우 “캠프잇”은 정당한 사유 없이 “회원”의 요구를 거절할 수 없습니다.
　가. 본인에 대한 위치정보 수집, 이용, 제공사실 확인자료
　나. 본인의 개인위치정보가 위치정보의 보호 및 이용 등에 관한 법률 또는 다른 법률 규정에 의하여 제3자에게 제공된 이유 및 내용
4. “회원”은 제1호 내지 제3호의 권리행사를 위해 “캠프잇”의 소정의 절차를 통해 요구할 수 있습니다.

법정대리인의 권리
1. “캠프잇”은 14세 미만의 “회원”에 대해서는 개인위치정보를 이용한 위치기반서비스 제공 및 개인위치정보의 제3자 제공에 대한 동의를 당해 “회원”과 당해 “회원”의 법정대리인으로부터 동의를 받아야 합니다. 이 경우 법정대리인은 본조 제2항에 의한 “회원”의 권리를 모두 가집니다.
2. “캠프잇”은 14세 미만의 아동의 개인위치정보 또는 위치정보 이용, 제공사실 확인자료를 이용약관에 명시 또는 고지한 범위를 넘어 이용하거나 제3자에게 제공하고자 하는 경우에는 14세미만의 아동과 그 법정대리인의 동의를 받아야 합니다. 단, 아래의 경우는 제외합니다.
　가. 위치정보 및 위치기반서비스 제공에 따른 요금정산을 위하여 위치정보 이용, 제공사실 확인자료가 필요한 경우
　나. 통계작성, 학술연구 또는 시장조사를 위하여 특정 개인을 알아볼 수 없는 형태로 가공하여 제공하는 경우

위치기반서비스사업자
1. 상호 : (주)애드블록
2. 대표자 : 황승진
3. 주소 : 서울특별시 서초구 강남대로 373
4. 대표 이메일 : support@campeat.io

위치정보관리책임자
부서명 : 고객센터
성명 : 박기철
직급 : 과장
연락처 : support@campeat.io

제 7 조 (손해배상)

1) 당사와 회원은 서비스 이용과 관련하여 고의 또는 과실로 상대방에게 손해를 끼친 경우에는 이를 배상하여야 합니다.

2) 당사는 무료로 제공하는 서비스의 이용과 관련하여 개인정보보호정책에서 정하는 내용에 위반하지 않는 한 어떠한 손해도 책임을 지지 않습니다.


제 8 조 (면책조항)

1) 당사는 천재지변, 전쟁, 기간통신사업자의 서비스 중지 및 기타 이에 준하는 불가항력으로 인하여 서비스를 제공할 수 없는 경우에는 서비스 제공에 대한 책임이 면제됩니다.

2) 당사는 서비스용 설비의 보수, 교체, 정기점검, 공사 등 부득이한 사유로 발생한 손해에 대한책임이 면제됩니다.

3) 당사는 회원의 게시물을 등록 전에 사전심사 하거나 상시적으로 게시물의 내용을 확인 또는 검토하여야 할 의무가 없으며, 그 결과에 대한 책임을 지지 아니합니다.


제 9 조 (재판권 및 준거법)

1) 이 약관에 명시되지 않은 사항은 전기통신사업법 등 대한민국의 관계법령과 상관습에 따릅니다.

2) 당사의 유료 서비스를 이용하는 회원의 경우 해당 서비스와 관련하여서는 당사가 별도로 정한 약관 및 정책에 따릅니다.

3) 서비스 이용으로 발생한 분쟁에 대해 소송이 제기되는 경우 대한민국 서울중앙지방법원을 관할 법원으로 합니다.

본 약관은 2019년 9월 2일부터 적용됩니다.
    </string>
    <string name="personal_terms">주식회사 애드블록(이하 “회사”라 함)은 「정보통신망 이용촉진 및 정보보호 등에 관한 법률」 등 개인정보와 관련된 법령에 따라 이용자의 개인정보의 보호를 위하여 다음과 같은 처리방침을 두고 있습니다.

1. 개인정보의 수집 및 이용목적

가. 홈페이지 회원가입 및 관리

회원 가입의사 확인, 회원제 서비스 제공에 따른 본인 식별·인증, 회원자격 유지·관리, 제한적 본인확인제 시행에 따른 본인확인, 서비스 부정이용 방지, 각종 고지·통지, 고충처리, 분쟁 조정을 위한 기록 보존 등을 목적으로 개인정보를 처리합니다.

나. 이용자 요청사항 처리

이용자의 신원 확인, 요청사항 확인, 사실조사를 위한 연락·통지, 처리결과 통보 등을 목적으로 개인정보를 처리합니다.

다. 재화 또는 서비스 제공

서비스 제공, 콘텐츠 제공, 본인인증 등을 목적으로 개인정보를 처리합니다.

라. 서비스 개선

신규 서비스(제품) 개발 및 맞춤 서비스 제공, 인구통계학적 특성에 따른 서비스 제공 및 광고 게재, 서비스의 유효성 확인, 접속빈도 파악 또는 이용자의 서비스 이용에 대한 통계 등을 목적으로 개인정보를 처리합니다.

2. 수집하는 개인정보의 항목 및 수집방법

가. 수집하는 개인정보의 항목

캠프잇 서비스

1) 회사는 회원가입, 원활한 고객상담, 서비스의 제공을 위해 회원가입 시 및 서비스 이용 시 아래와 같은 개인정보를 수집하고 있습니다.

- 필수항목 : 이름, 이메일 주소, 비밀번호, 휴대전화번호

2) 서비스 이용과정이나 처리 과정에서 아래와 같은 정보들이 자동으로 생성되어 수집될 수 있습니다.

- 수집내용 : IP Address, 쿠키, 방문 기록, 서비스 이용 기록, 불량 이용 기록 등


나. 개인정보 수집방법

회사는 다음과 같은 방법으로 개인정보를 수집합니다.

- 온라인 회원가입, 서비스 이용 과정에서 입력
- 생성정보 수집 툴을 통한 수집

3. 개인정보의 보유 및 이용 기간

회사는 이용자의 개인정보를 이용목적에 필요한 기간에만 제한적으로 보유, 이용합니다. 회사는 이용자가 개인정보의 수집 및 이용에 대한 동의를 철회하는 경우, 개인정보의 수집 및 이용목적이 달성된 경우 해당 개인정보를 지체 없이 파기합니다.

단, 불량 이용자 제재나 관련 분쟁 처리 등 서비스 관리를 위한 목적으로 1년 동안, 법령에 의해 보존해야만 하는 경우 아래와 같이 일정 기간동안 이용자정보를 보존합니다.

「전자상거래 등에서의 소비자보호에 관한 법률」
* 계약 또는 청약철회 등에 관한 기록 : 5년
* 대금결제 및 재화 등의 공급에 관한 기록 : 5년
* 소비자의 불만 또는 분쟁처리에 관한 기록 : 3년
* 표시·광고에 관한 기록 : 6개월
「전자금융거래법」    * 전자금용에 관한 기록 : 5년
「통신비밀보호법」	* 로그인 기록(로그기록자료, 접속지의 추적자료) : 3개월
「위치정보의 보호 및 이용 등에 관한 법률」	* 개인위치정보에 관한 기록 : 6개월

4. 개인정보 파기절차 및 파기방법

이용자의 개인정보는 원칙적으로 개인정보의 수집 및 이용목적이 달성되거나 보유 및 이용기간이 종료된 경우 지체 없이 파기됩니다.

회사의 개인정보 파기절차 및 방법은 다음과 같습니다.

1) 파기절차

- 이용자의 개인정보는 동의를 받은 수집 및 이용목적이 달성된 후 별도의 DB로 옮겨져(종이의 경우 별도의 서류함) 관련 법령에서 정한 일정한 기간동안 저장된 후 파기됩니다.

2) 파기방법

- 종이에 출력된 개인정보는 분쇄기로 분쇄하거나 소각을 통하여 파기합니다.
- 전자적 파일 형태로 저장된 개인정보는 기록을 재생할 수 없는 기술적 방법을 사용하여 삭제합니다.

3) 개인정보 유효기간제 (휴면계정 정책)

이용자가 1년 동안 캠프잇에서 제공하는 서비스(웹사이트, 모바일 웹, 모바일 앱)를 이용한 기록이 없을 경우, 서비스 미이용자의 개인정보는 일반 이용자의 개인정보와 분리하여 별도로 저장 및 관리됩니다(휴면 계정으로 변경). 회사는 휴면계정으로 변경되는 시점 도래 30일 전에 해당 내용에 대해 이메일 등을 통해 이용자에게 공지합니다. 분리 저장된 개인정보는 관련 법령에 특별한 규정이 있는 경우를 제외하고 해당 개인정보를 이용하거나 제공하지 않으며, 관련 법령에 따라 일정 기간 동안 보유되고 해당기간 종료 후 파기됩니다. 다만 파기되지 않은 개인정보는 해당 이용자의 요청에 따라 서비스 이용을 재개하는 시점에서 다시 제공됩니다.

5. 개인정보의 제3자 제공 및 처리 위탁

캠프잇 서비스는 현재 개인정보를 제3자에게 제공하고 있지 않습니다.
회사가 서비스 이행을 위하여 현재 위탁한 업무 내용별 수탁업체는 다음과 같습니다.

업체명 및 연락처: Google Firebase (https://firebase.google.com)
이전되는 국가: 미국
이전일시 및 방법: 서비스 이용 시점에서 네트워크를 통한 전송
위탁하는 업무의 내용 및 목적: 본 개인정보 처리방침 2. 가. 에 의하여 수집하는 개인정보를 통한 SMS 및 이메일 발송 서비스 (보관기간: 서비스 종료시까지)

업체명 및 연락처: Amazon Web Services Inc. (https://aws.amazon.com/compliance/contact/)
이전되는 국가: 미국
이전일시 및 방법: 서비스 이용 시점에서 네트워크를 통한 전송
위탁하는 업무의 내용 및 목적: 본 개인정보 처리방침 2. 가. 에 의하여 수집하는 개인정보 일체의 보관 (보관기간: 서비스 종료시까지)

6. 이용자 및 법정대리인의 권리와 그 행사방법

1) 이용자 및 법정 대리인은 언제든지 등록되어 있는 자신 혹은 당해 만 14세 미만 아동의 개인정보를 조회하거나 수정할 수 있으며 동의 철회 또는 가입 해지를 요청할 수도 있습니다.

2) 이용자 혹은 만 14세 미만 아동의 개인정보 조회, 수정을 위하여 개인정보 보호책임자에게 서면, 전화 또는 이메일로 연락하시면 지체 없이 조치하겠습니다.

3) 이용자가 개인정보의 오류에 대한 정정을 요청하신 경우에는 정정을 완료하기 전까지 당해 개인정보를 이용 또는 제공하지 않습니다. 또한 잘못된 개인정보를 제3자에게 이미 제공한 경우에는 정정 처리결과를 제3자에게 지체 없이 통지하여 정정이 이루어지도록 하겠습니다.

4) 회사는 이용자 혹은 법정 대리인의 요청에 의해 해지 또는 삭제된 개인정보는 개인정보 파기절차 및 파기방법에 명시된 바에 따라 처리하고 그 외의 용도로 열람 또는 이용할 수 없도록 처리하고 있습니다.

7. 개인정보 자동 수집 장치의 설치/운영 및 거부에 관한 사항

회사는 이용자의 접속 정보를 저장하고 수시로 불러오는 “쿠키” 및 그와 유사한 기술을 사용합니다. 쿠키는 이용자가 어플리케이션 서비스를 이용하거나 사이트를 방문하였을 때 이용자의 단말기에 저장되는 소량의 정보이며, 이용자가 사이트를 재방문했을 때 읽을 수 있는 정보를 저장합니다.

1) 쿠키의 사용 목적

- 이용자의 접속 세션을 유지하기 위하여
- 이용자의 서비스 및 사이트에 대한 이용 및 방문 행태 분석을 위하여
- 보안 접속을 위하여

2) 쿠키의 설치/운영 및 거부

- 이용자가 웹을 통해 서비스를 이용하는 경우 브라우저의 옵션을 설정함으로써 모든 쿠키를 허용하거나, 쿠키가 저장될 때마다 확인을 거치거나, 아니면 모든 쿠키의 저장을 거부할 수도 있습니다. 다만, 어플리케이션의 경우 쿠키 설정 옵션이 지원되지 않을 수 있습니다.
- 쿠키의 저장을 거부할 경우에는 로그인이 필요한 일부 서비스는 이용에 어려움이 있을 수 있습니다.


8. 개인정보 보호책임자

회사는 이용자의 개인정보를 보호하고 개인정보와 관련한 고충 처리를 위하여 다음과 같이 책임자와 담당자를 두고 있습니다.

개인정보 보호책임자
성명 : 방성현
직급 : 과장
연락처 : support@campeat.io

개인정보 보호 담당부서
부서명 : 고객센터
성명 : 박기철
직급 : 과장
연락처 : support@campeat.io


본 개인정보 처리방침 시행일자: 2019년 9월 2일
</string>
    <string name="campeat_service_policy">캠프잇(CampEat) 이용약관 (Service Policy)</string>
    <string name="personal_information_management_guide">개인정보취급 방침 (Personal Information Management Guide)</string>
    <string name="won_symbol">₩</string>
</resources>