<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white_color"
    tools:context=".AgreementTerms">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/helvetica"
            android:text="@string/terms_of_service_policy"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/_22sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/noto_regular"
            android:text="@string/campeat_terms"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title3" />

        <TextView
            android:id="@+id/txt_title2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/personal_information_management_guide"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView24" />

        <TextView
            android:id="@+id/txt_title3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/helveticaneue_medium"
            android:text="@string/campeat_service_policy"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_15sdp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="@dimen/_15sdp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/noto_regular"
            android:text="@string/personal_terms"
            android:textColor="@color/textcolordark"
            android:textSize="@dimen/_13sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title2" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>