<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linear_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8B000000"
    android:clickable="true"
    android:focusable="true"
    android:gravity="bottom"
    android:orientation="vertical"
    tools:context=".views.fragments.ScanQrFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/rounded_layout_white_background"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="@dimen/_3sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            android:background="@color/bottomSheetbuttoncolor"
            android:backgroundTint="@color/bottomSheetbuttoncolor"
            app:cardCornerRadius="@dimen/_3sdp"
            app:cardElevation="0dp" />


        <ImageView
            android:id="@+id/image_view_qr"
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/value_five"
            android:contentDescription="@string/image_desc"
            android:src="@mipmap/ic_qr" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/value_three"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/value_three"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/qr_step1"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txt_step2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/value_three"
            android:layout_marginTop="@dimen/value_five"
            android:layout_marginEnd="@dimen/value_three"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/qr_step2"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/txt_step3r"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/value_three"
            android:layout_marginTop="@dimen/value_five"
            android:layout_marginEnd="@dimen/value_three"
            android:layout_marginBottom="@dimen/_40sdp"
            android:fontFamily="@font/helveticaneue"
            android:gravity="center"
            android:text="@string/qr_step3"
            android:textColor="@color/black"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>


</LinearLayout>